[gd_scene load_steps=3 format=3 uid="uid://c5x262jkt8yf0"]

[ext_resource type="Script" uid="uid://m7rqg5aha0v1" path="res://Scenes/UI/title_screen.gd" id="1_xsyet"]

[sub_resource type="LabelSettings" id="LabelSettings_bb5vv"]
font_size = 45

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_xsyet")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.013748739, 0.054101586, 0.16209865, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Robobotomy"
label_settings = SubResource("LabelSettings_bb5vv")

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load Game"

[node name="SceneToLoad" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "(Optional) Scene File Path Here"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
